--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".SettingActivity"
             android:exported="true"></activity>
         <activity
+            android:name=".HowToPlayActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
