--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,20 @@
         android:theme="@style/Theme.NostalgiaMatchingFYP2024"
         tools:targetApi="31">
         <activity
+            android:name=".NormalActivity"
+            android:exported="false" />
+        <activity
             android:name=".EasyGame1Activity"
             android:exported="false" />
         <activity
             android:name=".EasyActivity"
-            android:exported="true"> </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".SettingActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".HowToPlayActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
