--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.NostalgiaMatchingFYP2024"
         tools:targetApi="31" >
         <activity
-            android:name=".ExpertGame1"
+            android:name=".ExpertGame1Activity"
             android:exported="false" />
         <activity
             android:name=".NormalActivity"
