--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,31 @@
         android:theme="@style/Theme.NostalgiaMatchingFYP2024"
         tools:targetApi="31">
         <activity
+            android:name=".NormalGame8Activity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalGame7Activity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalGame6Activity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalGame2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalGame3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalGame4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalGame1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalGame5Activity"
+            android:exported="false"
+            android:theme="@style/Theme.NostalgiaMatchingFYP2024" />
+        <activity
             android:name=".ExpertActivity"
             android:exported="false" />
         <activity
