--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,7 @@
             android:exported="false" />
         <activity
             android:name=".NormalGame5Activity"
-            android:exported="false"
-            android:theme="@style/Theme.NostalgiaMatchingFYP2024" />
+            android:exported="false" />
         <activity
             android:name=".ExpertActivity"
             android:exported="false" />
